corregido agregado de uniatlantico a departamento

--- a/req-edu.html
+++ b/req-edu.html
@@ -13,7 +13,7 @@
 <meta name="author" content="David Alejandro Sanchez Polo - Probaranquilla 2022" />
 
 
-<title>Datos de Egresados de Universidad del Atlantico</title>
+<title>Datos de Egresados del Atlantico</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -2709,8 +2709,8 @@ code span.ot { color: #007020; }
 
 
 <section class="page-header">
-<h1 class="title toc-ignore project-name">Datos de Egresados de
-Universidad del Atlantico</h1>
+<h1 class="title toc-ignore project-name">Datos de Egresados del
+Atlantico</h1>
 <h4 class="author project-author">David Alejandro Sanchez Polo -
 Probaranquilla 2022</h4>
 </section>
@@ -2723,28 +2723,46 @@ Probaranquilla 2022</h4>
 <p>Disclaimer: Las bases de datos del Ministerio de Educacion tiene en
 cuenta un agregado de conocimiento de ingenierias en “Ingeniería,
 arquitectura, urbanismo y afines”</p>
-<div id="htmlwidget-8197d6fb9d45e8ddf962" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-8197d6fb9d45e8ddf962">{"x":{"filter":"none","vertical":false,"data":[["UNIVERSIDAD DEL ATLANTICO"],[4638],[2697],[1030]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>2001-2020<\/th>\n      <th>2010-2020<\/th>\n      <th>2016-2020<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":[1,2,3]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-8fac1763c47dcd63e4af" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-8fac1763c47dcd63e4af">{"x":{"filter":"none","vertical":false,"data":[["ATLANTICO"],[5742],[5742],[5742]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>2001-2020<\/th>\n      <th>2010-2020<\/th>\n      <th>2016-2020<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":[1,2,3]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+</div>
+<div id="total-desagregado-por-universidad-de-conocimiento-ingenierias" class="section level1">
+<h1>TOTAL DESAGREGADO POR UNIVERSIDAD DE CONOCIMIENTO INGENIERIAS</h1>
+<div id="a-2020" class="section level2">
+<h2>2001 A 2020</h2>
+<div id="htmlwidget-4a06414a1118b3c3574c" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-4a06414a1118b3c3574c">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23"],["CORPORACION POLITECNICO DE LA COSTA ATLANTICA","CORPORACION TECNOLOGICA INDOAMERICA","CORPORACION UNIVERSIDAD DE LA COSTA CUC","CORPORACION UNIVERSITARIA AMERICANA","CORPORACION UNIVERSITARIA EMPRESARIAL DE SALAMANCA","CORPORACION UNIVERSITARIA LATINOAMERICANA - CUL","CORPORACION UNIVERSITARIA REFORMADA - CUR -","CORPORACION UNIVERSITARIA REMINGTON","ESCUELA NAVAL DE SUBOFICIALES ARC BARRANQUILLA","FUNDACION UNIVERSITARIA ANTONIO DE AREVALO - UNITECNAR","FUNDACION UNIVERSITARIA SAN MARTIN","INSTITUCI¿N UNIVERSITARIA ITSA","SERVICIO NACIONAL DE APRENDIZAJE-SENA-","UNIVERSIDAD ANTONIO NARI¿O","UNIVERSIDAD AUTONOMA DEL CARIBE- UNIAUTONOMA","UNIVERSIDAD DE SANTANDER - UDES","UNIVERSIDAD DEL ATLANTICO","UNIVERSIDAD DEL NORTE","UNIVERSIDAD INDUSTRIAL DE SANTANDER","UNIVERSIDAD LIBRE","UNIVERSIDAD NACIONAL ABIERTA Y A DISTANCIA UNAD","UNIVERSIDAD SANTO TOMAS","UNIVERSIDAD SIMON BOLIVAR"],[213,16,988,127,2,38,9,25,69,3,1,545,1451,113,357,1,444,835,50,122,55,1,277]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>INSTITUCIÓN DE EDUCACIÓN SUPERIOR (IES)<\/th>\n      <th>GRADUADOS<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":2},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+</div>
+<div id="a-2020-1" class="section level2">
+<h2>2010 A 2020</h2>
+<div id="htmlwidget-c7ce1fa665b60734c97f" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-c7ce1fa665b60734c97f">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23"],["CORPORACION POLITECNICO DE LA COSTA ATLANTICA","CORPORACION TECNOLOGICA INDOAMERICA","CORPORACION UNIVERSIDAD DE LA COSTA CUC","CORPORACION UNIVERSITARIA AMERICANA","CORPORACION UNIVERSITARIA EMPRESARIAL DE SALAMANCA","CORPORACION UNIVERSITARIA LATINOAMERICANA - CUL","CORPORACION UNIVERSITARIA REFORMADA - CUR -","CORPORACION UNIVERSITARIA REMINGTON","ESCUELA NAVAL DE SUBOFICIALES ARC BARRANQUILLA","FUNDACION UNIVERSITARIA ANTONIO DE AREVALO - UNITECNAR","FUNDACION UNIVERSITARIA SAN MARTIN","INSTITUCI¿N UNIVERSITARIA ITSA","SERVICIO NACIONAL DE APRENDIZAJE-SENA-","UNIVERSIDAD ANTONIO NARI¿O","UNIVERSIDAD AUTONOMA DEL CARIBE- UNIAUTONOMA","UNIVERSIDAD DE SANTANDER - UDES","UNIVERSIDAD DEL ATLANTICO","UNIVERSIDAD DEL NORTE","UNIVERSIDAD INDUSTRIAL DE SANTANDER","UNIVERSIDAD LIBRE","UNIVERSIDAD NACIONAL ABIERTA Y A DISTANCIA UNAD","UNIVERSIDAD SANTO TOMAS","UNIVERSIDAD SIMON BOLIVAR"],[213,16,988,127,2,38,9,25,69,3,1,545,1451,113,357,1,444,835,50,122,55,1,277]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>INSTITUCIÓN DE EDUCACIÓN SUPERIOR (IES)<\/th>\n      <th>GRADUADOS<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":2},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+</div>
+<div id="a-2020-2" class="section level2">
+<h2>2016 A 2020</h2>
+<div id="htmlwidget-f491ed3422d67d0c3b62" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-f491ed3422d67d0c3b62">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23"],["CORPORACION POLITECNICO DE LA COSTA ATLANTICA","CORPORACION TECNOLOGICA INDOAMERICA","CORPORACION UNIVERSIDAD DE LA COSTA CUC","CORPORACION UNIVERSITARIA AMERICANA","CORPORACION UNIVERSITARIA EMPRESARIAL DE SALAMANCA","CORPORACION UNIVERSITARIA LATINOAMERICANA - CUL","CORPORACION UNIVERSITARIA REFORMADA - CUR -","CORPORACION UNIVERSITARIA REMINGTON","ESCUELA NAVAL DE SUBOFICIALES ARC BARRANQUILLA","FUNDACION UNIVERSITARIA ANTONIO DE AREVALO - UNITECNAR","FUNDACION UNIVERSITARIA SAN MARTIN","INSTITUCI¿N UNIVERSITARIA ITSA","SERVICIO NACIONAL DE APRENDIZAJE-SENA-","UNIVERSIDAD ANTONIO NARI¿O","UNIVERSIDAD AUTONOMA DEL CARIBE- UNIAUTONOMA","UNIVERSIDAD DE SANTANDER - UDES","UNIVERSIDAD DEL ATLANTICO","UNIVERSIDAD DEL NORTE","UNIVERSIDAD INDUSTRIAL DE SANTANDER","UNIVERSIDAD LIBRE","UNIVERSIDAD NACIONAL ABIERTA Y A DISTANCIA UNAD","UNIVERSIDAD SANTO TOMAS","UNIVERSIDAD SIMON BOLIVAR"],[213,16,988,127,2,38,9,25,69,3,1,545,1451,113,357,1,444,835,50,122,55,1,277]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>INSTITUCIÓN DE EDUCACIÓN SUPERIOR (IES)<\/th>\n      <th>GRADUADOS<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":2},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+</div>
 </div>
 <div id="total-de-desagregados-por-nbc-para-uniatlantico" class="section level1">
 <h1>TOTAL DE DESAGREGADOS POR NBC PARA UNIATLANTICO</h1>
 <p>Disclaimer: Las bases de datos del Ministerio de Educacion tiene en
 cuenta un agregado de conocimiento de ingenierias en “Ingeniería,
 arquitectura, urbanismo y afines”</p>
-<div id="a-2020" class="section level2">
+<div id="a-2020-3" class="section level2">
 <h2>2001 A 2020</h2>
-<div id="htmlwidget-d0f1e269e0d486d45b02" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-d0f1e269e0d486d45b02">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4","5"],["ARQUITECTURA","INGENIERIA AGROINDUSTRIAL, ALIMENTOS Y AFINES","INGENIERIA INDUSTRIAL Y AFINES","INGENIERIA MECANICA Y AFINES","INGENIERIA QUIMICA Y AFINES"],[1456,286,1177,863,856]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>NÚCLEO BÁSICO DEL CONOCIMIENTO (NBC)<\/th>\n      <th>GRADUADOS<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":2},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-b9dbd2cbfd224a1e12b7" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-b9dbd2cbfd224a1e12b7">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14"],["ARQUITECTURA","INGENIERIA ADMINISTRATIVA Y AFINES","INGENIERIA AGROINDUSTRIAL, ALIMENTOS Y AFINES","INGENIERIA AMBIENTAL, SANITARIA Y AFINES","INGENIERIA BIOMEDICA Y AFINES","INGENIERIA CIVIL Y AFINES","INGENIERIA DE MINAS, METALURGIA Y AFINES","INGENIERIA DE SISTEMAS, TELEMATICA Y AFINES","INGENIERIA ELECTRICA Y AFINES","INGENIERIA ELECTRONICA, TELECOMUNICACIONES Y AFINES","INGENIERIA INDUSTRIAL Y AFINES","INGENIERIA MECANICA Y AFINES","INGENIERIA QUIMICA Y AFINES","OTRAS INGENIERIAS"],[400,199,78,238,5,573,8,840,338,236,1609,868,124,226]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>NÚCLEO BÁSICO DEL CONOCIMIENTO (NBC)<\/th>\n      <th>GRADUADOS<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":2},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 </div>
-<div id="a-2020-1" class="section level2">
+<div id="a-2020-4" class="section level2">
 <h2>2010 A 2020</h2>
-<div id="htmlwidget-524b1841069c22095320" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-524b1841069c22095320">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4","5"],["ARQUITECTURA","INGENIERIA AGROINDUSTRIAL, ALIMENTOS Y AFINES","INGENIERIA INDUSTRIAL Y AFINES","INGENIERIA MECANICA Y AFINES","INGENIERIA QUIMICA Y AFINES"],[928,244,625,453,447]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>NÚCLEO BÁSICO DEL CONOCIMIENTO (NBC)<\/th>\n      <th>GRADUADOS<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":2},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-4f5d67138fd3622c72b2" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-4f5d67138fd3622c72b2">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14"],["ARQUITECTURA","INGENIERIA ADMINISTRATIVA Y AFINES","INGENIERIA AGROINDUSTRIAL, ALIMENTOS Y AFINES","INGENIERIA AMBIENTAL, SANITARIA Y AFINES","INGENIERIA BIOMEDICA Y AFINES","INGENIERIA CIVIL Y AFINES","INGENIERIA DE MINAS, METALURGIA Y AFINES","INGENIERIA DE SISTEMAS, TELEMATICA Y AFINES","INGENIERIA ELECTRICA Y AFINES","INGENIERIA ELECTRONICA, TELECOMUNICACIONES Y AFINES","INGENIERIA INDUSTRIAL Y AFINES","INGENIERIA MECANICA Y AFINES","INGENIERIA QUIMICA Y AFINES","OTRAS INGENIERIAS"],[400,199,78,238,5,573,8,840,338,236,1609,868,124,226]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>NÚCLEO BÁSICO DEL CONOCIMIENTO (NBC)<\/th>\n      <th>GRADUADOS<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":2},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 </div>
-<div id="a-2020-2" class="section level2">
+<div id="a-2020-5" class="section level2">
 <h2>2016 A 2020</h2>
-<div id="htmlwidget-70fda51ec178f6230cf1" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-70fda51ec178f6230cf1">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4","5"],["ARQUITECTURA","INGENIERIA AGROINDUSTRIAL, ALIMENTOS Y AFINES","INGENIERIA INDUSTRIAL Y AFINES","INGENIERIA MECANICA Y AFINES","INGENIERIA QUIMICA Y AFINES"],[366,107,227,193,137]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>NÚCLEO BÁSICO DEL CONOCIMIENTO (NBC)<\/th>\n      <th>GRADUADOS<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":2},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-e31b4aba3d76babd79f7" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-e31b4aba3d76babd79f7">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14"],["ARQUITECTURA","INGENIERIA ADMINISTRATIVA Y AFINES","INGENIERIA AGROINDUSTRIAL, ALIMENTOS Y AFINES","INGENIERIA AMBIENTAL, SANITARIA Y AFINES","INGENIERIA BIOMEDICA Y AFINES","INGENIERIA CIVIL Y AFINES","INGENIERIA DE MINAS, METALURGIA Y AFINES","INGENIERIA DE SISTEMAS, TELEMATICA Y AFINES","INGENIERIA ELECTRICA Y AFINES","INGENIERIA ELECTRONICA, TELECOMUNICACIONES Y AFINES","INGENIERIA INDUSTRIAL Y AFINES","INGENIERIA MECANICA Y AFINES","INGENIERIA QUIMICA Y AFINES","OTRAS INGENIERIAS"],[400,199,78,238,5,573,8,840,338,236,1609,868,124,226]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>NÚCLEO BÁSICO DEL CONOCIMIENTO (NBC)<\/th>\n      <th>GRADUADOS<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":2},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 </section>
